[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/ethnocentric rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/ui/menus/LoadGameMenu.gd" type="Script" id=2]
[ext_resource path="res://game/ui/buttons/MenuButton.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="LoadGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -735.0
margin_top = -434.5
margin_right = 735.0
margin_bottom = 434.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1470.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Cargar Partida"
align = 1

[node name="SlotsContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 435.0
margin_top = 65.0
margin_right = 1035.0
margin_bottom = 869.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Slot1" type="Panel" parent="VBoxContainer/SlotsContainer"]
margin_top = 184.0
margin_right = 600.0
margin_bottom = 284.0
rect_min_size = Vector2( 350, 100 )

[node name="SlotLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot1"]
margin_right = 91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Slot 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Nivel"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame1" type="Button" parent="VBoxContainer/SlotsContainer/Slot1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -43.0
margin_right = 125.0
custom_fonts/font = SubResource( 3 )
text = "Cargar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SlotsContainer"]
margin_top = 304.0
margin_right = 600.0
margin_bottom = 308.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/SlotsContainer"]
margin_top = 328.0
margin_right = 600.0
margin_bottom = 332.0

[node name="Slot2" type="Panel" parent="VBoxContainer/SlotsContainer"]
margin_top = 352.0
margin_right = 600.0
margin_bottom = 452.0
rect_min_size = Vector2( 350, 100 )

[node name="SlotLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot2"]
margin_right = 91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Slot 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Nivel"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame2" type="Button" parent="VBoxContainer/SlotsContainer/Slot2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -43.0
margin_right = 125.0
custom_fonts/font = SubResource( 3 )
text = "Cargar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/SlotsContainer"]
margin_top = 472.0
margin_right = 600.0
margin_bottom = 476.0

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/SlotsContainer"]
margin_top = 496.0
margin_right = 600.0
margin_bottom = 500.0

[node name="Slot3" type="Panel" parent="VBoxContainer/SlotsContainer"]
margin_top = 520.0
margin_right = 600.0
margin_bottom = 620.0
rect_min_size = Vector2( 350, 100 )

[node name="SlotLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot3"]
margin_right = 91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Slot 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Nivel"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame3" type="Button" parent="VBoxContainer/SlotsContainer/Slot3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -43.0
margin_right = 125.0
custom_fonts/font = SubResource( 3 )
text = "Cargar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSlot1" type="Label" parent="."]
visible = false
margin_left = 696.0
margin_top = 362.0
margin_right = 1222.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 4 )
text = "No hay partidas
guardadas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSlot2" type="Label" parent="."]
visible = false
margin_left = 696.0
margin_top = 526.0
margin_right = 1222.0
margin_bottom = 619.0
custom_fonts/font = SubResource( 4 )
text = "No hay partidas
guardadas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSlot3" type="Label" parent="."]
visible = false
margin_left = 696.0
margin_top = 696.0
margin_right = 1222.0
margin_bottom = 789.0
custom_fonts/font = SubResource( 4 )
text = "No hay partidas
guardadas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="." instance=ExtResource( 3 )]
margin_top = 974.0
margin_bottom = 1074.0
text = "Volver          "
[connection signal="pressed" from="VBoxContainer/SlotsContainer/Slot1/LoadGame1" to="." method="_on_LoadGame1_pressed"]
[connection signal="pressed" from="VBoxContainer/SlotsContainer/Slot2/LoadGame2" to="." method="_on_LoadGame2_pressed"]
[connection signal="pressed" from="VBoxContainer/SlotsContainer/Slot3/LoadGame3" to="." method="_on_LoadGame3_pressed"]
